--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -47,10 +47,13 @@
   border-radius: 20px;
 }
 
+
+/* Hamburger bianco */
 .navbar-toggler {
-  border-color: #fff;
+  border: 1.5px solid white !important;
 }
 
+/* Icona bianca */
 .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' stroke='white' stroke-width='2' viewBox='0 0 24 24'%3e%3cpath stroke-linecap='round' stroke-linejoin='round' d='M4 6h16M4 12h16M4 18h16'/%3e%3c/svg%3e") !important;
 }
