--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -79,14 +79,17 @@
   background: none;
   border: none;
   color: white;
-  font-size: 18px;
-  padding: 5px 0;
+  font-size: 14px;
+  font-weight: 600;
+  padding: 0.3rem 0;
   cursor: pointer;
   text-align: left;
   text-decoration: none;
-  margin-left: 20px;
 }
 
+.menu-item:hover {
+  color: #f4b20b !important;
+}
 .menu-item.logout {
   border: 1px solid red;
   color: red;
@@ -126,11 +129,11 @@
 
   .desktop-menu {
     display: flex;
-    gap: 1rem;
     align-items: center;
   }
 
   .menu-item {
     padding: 0.3rem 0.8rem;
+    margin-left: 20px;
   }
 }
