--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -85,6 +85,7 @@
   cursor: pointer;
   text-align: left;
   text-decoration: none;
+  margin-left: 20px;
 }
 
 .menu-item:hover {
@@ -96,6 +97,7 @@
   padding: 0.4rem 1rem;
   border-radius: 8px;
   text-align: center;
+  max-width: 50%;
 }
 
 /* DROPDOWN MOBILE */
